# imgconvert

./: .gitignore  README.md  formats.py  pyproject.toml  setup.py
backends/: __init__.py  common.py  raster.py
demo/: demo.py
examples/: demo.py
imgconvert/: MIT License  README.md  setup.py
imgconvert/imgconvert/: __init__.py  converter.py  formats.py
imgconvert/imgconvert/backends/: misc.py  raster.py  raw.py  vector.py
